Don't submit registration form until 'personal data' checkbox hasn't checked.

--- a/insurance/templates/calc/kasko/step3noreg.html
+++ b/insurance/templates/calc/kasko/step3noreg.html
@@ -43,6 +43,14 @@
             width: 640,
             modal: true
           });
+
+          $("#regform form").submit(function() {
+            if (!$("#id_personal").parent().hasClass("on")) {
+               return false;
+            } else {
+               return true;
+            }
+          });
         });
     </script>
     {% endif %}
