--- a/insurance/templates/calc/kasko/step3noreg.html
+++ b/insurance/templates/calc/kasko/step3noreg.html
@@ -120,7 +120,7 @@
                     <div id="modal" style="display: none">
                         <h2>Конфиденциальность личной информации</h2>
                         <div class="text-dialog">
-                            Для оформления полиса вы будете вводить личные данные. Чтобы в дальнешем обеспечить к ним безопасный доступ, мы создадим логин и пароль. Пожалуйста, укажите ваш адрес электронный почты и номер мобильного телефона. Ваши логин и пароль будут отправлены в виде электронного письма.
+                            Для оформления полиса вы будете вводить личные данные. Чтобы в дальнейшем обеспечить к ним безопасный доступ, мы создадим логин и пароль. Пожалуйста, укажите ваш адрес электронный почты и номер мобильного телефона. Ваши логин и пароль будут отправлены в электронном письме.
                         </div>
                         <div class="login-checkbox">
                             <div class="style-checkbox"><input type="checkbox" id="id_login"/>
