Fixed civil_liability field submit.

--- a/insurance/templates/calc/ifl/step1.html
+++ b/insurance/templates/calc/ifl/step1.html
@@ -72,7 +72,7 @@
             $("#form-step1").submit(function() {
               props = ["#id_property_sum", "#id_interior_decoration_summ",
                        "#id_environment_summ", "#id_household_effects_summ",
-                       "#id_civil_liability"];
+                       "#id_civil_liability_summ"];
 
               $.each(props, function(i, id) {
                 var v = $(id).val();
