Changed calc name. ref #67

--- a/insurance/static/css/style.css
+++ b/insurance/static/css/style.css
@@ -2243,7 +2243,7 @@ div.messages li {
     height: 47px;
     text-decoration: none;
     color: #fff;
-    text-transform: uppercase;
+/*    text-transform: uppercase; */
     position: relative;
 }
 
