--- a/insurance/templates/calc/calc.html
+++ b/insurance/templates/calc/calc.html
@@ -20,7 +20,7 @@
         <li class="ui-state-default ui-corner-top"><a href="#">HC</a></li>
         <li class="ui-state-default ui-corner-top"><a href="#">ВЗР</a></li>
         <li class="ui-state-default ui-corner-top{% ifequal tab 6 %} ui-tabs-selected ui-state-active{% endifequal %}">
-            <a href="{% url ncalc_step1_ifl %}">ИФЛ</a>
+            <a href="{% url ncalc_step1_ifl %}">Имущество</a>
         </li>
     </ul>
 
