--- a/insurance/apps/profile/templates/profile/userprofile_editpersona.html
+++ b/insurance/apps/profile/templates/profile/userprofile_editpersona.html
@@ -1,34 +1,36 @@
 {% extends "base.html" %}
 {% block content %}
     <div class="content">
-        <div class="tabs_box">
-            <ul class="tabs">
-                <li><a class="active" href="{% url userprofile_edit %}">МОИ ДАННЫЕ</a></li>
-                <li><a href="#">МОИ ПОЛИСЫ</a></li>
-                <li><a href="{% url notification_notices %}">УВЕДОМЛЕНИЯ {% if notice_unseen_count %}({{ notice_unseen_count }}){% endif %}</a></li>
+        <div id="calc-tabs">
+            <ul class="ui-tabs-nav ui-helper-reset ui-helper-clearfix ui-widget-header ui-corner-all">
+                <li class="ui-state-default ui-corner-top ui-tabs-selected ui-state-active"><a href="{% url userprofile_edit %}">Мои данные</a></li>
+                <li class="ui-state-default ui-corner-top"><a href="{% url userprofile_policylist %}">Мои полисы</a></li>
+                <li class="ui-state-default ui-corner-top"><a href="{% url notification_notices %}">Уведомления {% if notice_unseen_count %}({{ notice_unseen_count }}){% endif %}</a></li>
                 <li><a href="#">FAQ</a></li>
             </ul>
-
             <!--- Первая закладка --->
-            <div id="tabs_cont_1" class="bg_tabs_f">
-                <div class="bg_tabs_t">
-                    <div class="bg_tabs_b">
-                        <div class="tabs2">
-                            <ul class="tab5">
-                                <li><a href="{% url userprofile_edit %}">
-                                    {% if main_persona %}{{ main_persona.last_name }} {{ main_persona.first_name }}{% else %}
-                                        Вы{% endif %}</a></li>
+            <div class="ui-tabs-panel ui-widget-content ui-corner-bottom">
+                <div>
+                    <div>
+                          <div id="calc-tabs" class="low-tabs shrink-tabs">
+                            <ul class="ui-tabs-nav ui-helper-reset ui-helper-clearfix ui-widget-header ui-corner-all">
+                                <li class="ui-state-default ui-corner-top"><a href="{% url userprofile_edit %}">
+                                    {% if main_persona %}
+                                        {{ main_persona.last_name }} {{ main_persona.first_name }}
+                                    {% else %}
+                                        Вы
+                                    {% endif %}</a></li>
                                 {% for pers in personas %}
-                                    <li><a href="{% url userprofile_editpersona pers.id %}"
-                                           {% ifequal pers.id persona.id %}class="active"{% endifequal %}>{{ pers.last_name }} {{ pers.first_name }}</a>
+                                    <li class="ui-state-default ui-corner-top {% ifequal pers.id persona.id %} ui-tabs-selected ui-state-active{% endifequal %}"><a
+                                            href="{% url userprofile_editpersona pers.id %}">{{ pers.last_name }} {{ pers.first_name }}</a>
                                     </li>
                                 {% endfor %}
                             </ul>
+
                             <!---- Первая закладка внутри ----->
-                            <div id="tabs_cont3_1" class="bg_tabs3_box">
                                 {% url userprofile_editpersona as action_url %}
                                 {% include "profile/forms/persona_form2.html" with persona=persona %}
-                            </div>
+
                         </div>
                     </div>
                 </div>
