--- a/insurance/apps/profile/templates/profile/userprofile_addpersona.html
+++ b/insurance/apps/profile/templates/profile/userprofile_addpersona.html
@@ -2,43 +2,37 @@
 
 {% block content %}
     <div class="content">
-        <div class="tabs_box">
-            <ul class="tabs">
-                <li><a class="active" href="{% url userprofile_edit %}">МОИ ДАННЫЕ</a></li>
-                <li><a href="#">МОИ ПОЛИСЫ</a></li>
-                <li><a href="#">УВЕДОМЛЕНИЯ</a></li>
+
+        <div id="calc-tabs">
+            <ul class="ui-tabs-nav ui-helper-reset ui-helper-clearfix ui-widget-header ui-corner-all">
+                <li class="ui-state-default ui-corner-top ui-tabs-selected ui-state-active"><a href="{% url userprofile_edit %}">Мои данные</a></li>
+                <li class="ui-state-default ui-corner-top"><a href="{% url userprofile_policylist %}">Мои полисы</a></li>
+                <li class="ui-state-default ui-corner-top"><a href="{% url notification_notices %}">Уведомления {% if notice_unseen_count %}({{ notice_unseen_count }}){% endif %}</a></li>
                 <li><a href="#">FAQ</a></li>
             </ul>
-
             <!--- Первая закладка --->
-            <div id="tabs_cont_1" class="bg_tabs_f">
-                <div class="bg_tabs_t">
-                    <div class="bg_tabs_b">
-                        <div class="tabs2">
-                            <ul class="tab5">
-                                <li><a href="{% url userprofile_edit %}" class="user_name">
-                                    <b>{% if main_persona %}{{ main_persona.last_name }} {{ main_persona.first_name }}{% else %}
-                                        Вы{% endif %}</b></a></li>
+            <div class="ui-tabs-panel ui-widget-content ui-corner-bottom">
+                <div >
+                    <div >
+
+                            <div id="calc-tabs" class="low-tabs shrink-tabs">
+                            <ul class="ui-tabs-nav ui-helper-reset ui-helper-clearfix ui-widget-header ui-corner-all">
+                                <li class="ui-state-default ui-corner-top"><a href="{% url userprofile_edit %}">
+                                    {% if main_persona %}
+                                        {{ main_persona.last_name }} {{ main_persona.first_name }}
+                                    {% else %}
+                                        Вы
+                                    {% endif %}</a></li>
                                 {% for pers in personas %}
-                                    <li class="user_name"><a
+                                    <li class="ui-state-default ui-corner-top"><a
                                             href="{% url userprofile_editpersona pers.id %}">{{ pers.last_name }} {{ pers.first_name }}</a>
                                     </li>
                                 {% endfor %}
-                                <li class="active"><a
+                                <li class="ui-state-default ui-corner-top ui-tabs-selected ui-state-active"><a
                                             href="#">Новая персона</a>
                                     </li>
                             </ul>
-                            <!---- Первая закладка внутри ----->
-                            <div id="tabs_cont3_1" class="bg_tabs3_box">
-{#                                <div class="bg_tabs2_f">#}
-{#                                    <div class="cont_text">#}
-{#                                        <p>Вы можете добавить персональные данные других лиц. Эти данные помогут вам#}
-{#                                            эффективно и быстро оформить для них страховые полисы.</p>#}
-{##}
-{#                                        <p><a href="{% url userprofile_addpersona %}" class="style_button">ДОБАВИТЬ</a>#}
-{#                                        </p></p>#}
-{#                                    </div>#}
-{#                                </div>#}
+
                                 {% url userprofile_editpersona as action_url %}
                                 {% include "profile/forms/persona_form2.html" with persona=persona %}
                             </div>
