--- a/insurance/apps/profile/templates/profile/userprofile_policylist.html
+++ b/insurance/apps/profile/templates/profile/userprofile_policylist.html
@@ -3,28 +3,25 @@
 {% block content %}
 
     <div class="content">
-        <div class="tabs_box">
-            <ul class="tabs">
-                <li><a href="{% url userprofile_edit %}">МОИ ДАННЫЕ</a></li>
-                <li><a class="active" href="{% url userprofile_policylist %}">МОИ ПОЛИСЫ</a></li>
-                <li><a href="{% url notification_notices %}">УВЕДОМЛЕНИЯ {% if notice_unseen_count %}({{ notice_unseen_count }}){% endif %}</a></li>
+
+        <div id="calc-tabs">
+            <ul class="ui-tabs-nav ui-helper-reset ui-helper-clearfix ui-widget-header ui-corner-all">
+                <li class="ui-state-default ui-corner-top"><a href="{% url userprofile_edit %}">Мои данные</a></li>
+                <li class="ui-state-default ui-corner-top ui-tabs-selected ui-state-active"><a href="{% url userprofile_policylist %}">Мои полисы</a></li>
+                <li class="ui-state-default ui-corner-top"><a href="{% url notification_notices %}">Уведомления {% if notice_unseen_count %}({{ notice_unseen_count }}){% endif %}</a></li>
                 <li><a href="#">FAQ</a></li>
             </ul>
-
-            <div id="tabs_cont_1" class="bg_tabs_f">
-                <div class="bg_tabs_t">
-                    <div class="bg_tabs_b">
-                        <div class="tabs2">
-                            <ul class="tab5">
-                                    {% for type_id, type_name in policy_types.items %}
-                                    <li>
-                                        <a {% if type_id|stringformat:"s" == policy_type %}class="active"{% endif %}
-                                            href="{% url userprofile_policylist_type type_id %}">{{ type_name }}</a>
+            <div  class="ui-tabs-panel ui-widget-content ui-corner-bottom">
+                          <div id="calc-tabs" class="low-tabs shrink-tabs">
+                            <ul class="ui-tabs-nav ui-helper-reset ui-helper-clearfix ui-widget-header ui-corner-all">
+                                {% for type_id, type_name in policy_types.items %}
+                                    <li class="ui-state-default ui-corner-top {% if type_id|stringformat:"s" == policy_type %} ui-tabs-selected ui-state-active{% endif %}">
+                                        <a href="{% url userprofile_policylist_type type_id %}">{{ type_name }}</a>
                                     </li>
                                     {% endfor %}
                             </ul>
-                            <div id="tabs_cont3_1" class="bg_tabs3_box">
-                                <div class="bg_tabs2_f">
+
+                                <div class="form-round-block low-tabs">
 <table class="policy-list">
     {% if policy_type in "12" %}
       <thead><th>Страховая компания</th><th>Страхователь</th><th>Собственник ТС</th>
@@ -46,12 +43,8 @@
     {% endif %}
 </table>
 </div>
-</div>
-</div>
             </div>
-                        </div>
-                    </div>
-                </div>
-
+            </div>
+            </div>
             </div>
 {% endblock %}
