FAQ and notifications in profile.

--- a/insurance/apps/notification/templates/notification/notices.html
+++ b/insurance/apps/notification/templates/notification/notices.html
@@ -2,22 +2,17 @@
 
 {% block content %}
 <div class="content">
-  <div class="tabs_box">
-    <ul class="tabs">
-      <li><a href="{% url userprofile_edit %}">МОИ ДАННЫЕ</a></li>
-      <li><a href="{% url userprofile_policylist %}">МОИ ПОЛИСЫ</a></li>
-      <li><a class="active" href="{% url notification_notices %}">УВЕДОМЛЕНИЯ {% if notice_unseen_count %}({{ notice_unseen_count }}){% endif %}</a></li>
-      <li><a href="#">FAQ</a></li>
-    </ul>
+        <div id="calc-tabs">
+            <ul class="ui-tabs-nav ui-helper-reset ui-helper-clearfix ui-widget-header ui-corner-all">
+                <li class="ui-state-default ui-corner-top"><a href="{% url userprofile_edit %}">Мои данные</a></li>
+                <li class="ui-state-default ui-corner-top"><a href="{% url userprofile_policylist %}">Мои полисы</a></li>
+                <li class="ui-state-default ui-corner-top ui-tabs-selected ui-state-active"><a href="{% url notification_notices %}">Уведомления {% if notice_unseen_count %}({{ notice_unseen_count }}){% endif %}</a></li>
+                <li class="ui-state-default ui-corner-top"><a href="{% url userprofile_faq %}">FAQ</a></li>
+            </ul>
+
  <!--- Первая закладка --->
-    <div id="tabs_cont_1" class="bg_tabs_f">
-      <div class="bg_tabs_t">
-        <div class="bg_tabs_b">
-            <br/><br/><br/>
-          <div class="tabs2">
-               <div id="tabs_cont3_1" class="bg_tabs3_box">
-              <div class="bg_tabs2_f">
-                <div class="cont_text">
+    <div class="ui-tabs-panel ui-widget-content ui-corner-bottom">
+        <div class="cont_text">
 <div id="ins_notification_inbox">
   <h3>Мои уведомления</h3>
   <table width="100%" cellspacing="0" class="notices">
@@ -28,7 +23,7 @@
     </tr>
     {% for notice in notices %}
     <tr class="{% cycle 'odd' 'nodd' %}{% if notice.unseen %} unread{% endif %}">
-      <td>{{ notice.sub }}</a></td>
+      <td>{{ notice.sub }}</td>
       <td><a href="{% url notification_notice notice.id %}">{{ notice.message|truncatewords_html:"4" }}</a></td>
       <td>{{ notice.added }}</td>
     </tr>
@@ -44,12 +39,7 @@
   </div>
 
 </div>  </div>
-
 </div>  </div>
-
-</div>  </div>
-
-</div></div>  </div>
 
 </div>
 {% block persona_form %}{% endblock %}
