--- a/insurance/apps/profile/templates/profile/userprofile_base2.html
+++ b/insurance/apps/profile/templates/profile/userprofile_base2.html
@@ -7,7 +7,7 @@
                 <li class="ui-state-default ui-corner-top ui-tabs-selected ui-state-active"><a href="{% url userprofile_edit %}">Мои данные</a></li>
                 <li class="ui-state-default ui-corner-top"><a href="{% url userprofile_policylist %}">Мои полисы</a></li>
                 <li class="ui-state-default ui-corner-top"><a href="{% url notification_notices %}">Уведомления {% if notice_unseen_count %}({{ notice_unseen_count }}){% endif %}</a></li>
-                <li><a href="#">FAQ</a></li>
+                <li class="ui-state-default ui-corner-top"><a href="{% url userprofile_faq %}">FAQ</a></li>
             </ul>
 
             <!--- Первая закладка --->
