--- a/insurance/apps/profile/templates/profile/userprofile_policylist.html
+++ b/insurance/apps/profile/templates/profile/userprofile_policylist.html
@@ -9,7 +9,7 @@
                 <li class="ui-state-default ui-corner-top"><a href="{% url userprofile_edit %}">Мои данные</a></li>
                 <li class="ui-state-default ui-corner-top ui-tabs-selected ui-state-active"><a href="{% url userprofile_policylist %}">Мои полисы</a></li>
                 <li class="ui-state-default ui-corner-top"><a href="{% url notification_notices %}">Уведомления {% if notice_unseen_count %}({{ notice_unseen_count }}){% endif %}</a></li>
-                <li><a href="#">FAQ</a></li>
+                <li class="ui-state-default ui-corner-top"><a href="{% url userprofile_faq %}">FAQ</a></li>
             </ul>
             <div  class="ui-tabs-panel ui-widget-content ui-corner-bottom">
                           <div id="calc-tabs" class="low-tabs shrink-tabs">
