--- a/insurance/apps/profile/templates/profile/userprofile_faq.html
+++ b/insurance/apps/profile/templates/profile/userprofile_faq.html
@@ -10,10 +10,10 @@
             <ul class="ui-tabs-nav ui-helper-reset ui-helper-clearfix ui-widget-header ui-corner-all">
                 <li class="ui-state-default ui-corner-top"><a href="{% url userprofile_edit %}">Мои данные</a></li>
                 <li class="ui-state-default ui-corner-top"><a href="{% url userprofile_policylist %}">Мои полисы</a></li>
-                <li class="ui-state-default ui-corner-top"><a href="{% url notification_notices %}">Уведомления {% if notice_unseen_count %}({{ notice_unseen_count }}){% endif %}</a></li>
+                <li id="long-tab" class="ui-state-default ui-corner-top"><a href="{% url notification_notices %}">Уведомления {% if notice_unseen_count %}({{ notice_unseen_count }}){% endif %}</a></li>
                 <li class="ui-state-default ui-corner-top ui-tabs-selected ui-state-active"><a href="{% url userprofile_faq %}">FAQ</a></li>
             </ul>
-            <div  class="ui-tabs-panel ui-widget-content ui-corner-bottom">
+            <div  class="ui-tabs-panel ui-widget-content ui-corner-bottom no-background">
 
                 {{ flatpage.content|safe }}
 
