--- a/insurance/apps/profile/templates/profile/userprofile_policylist.html
+++ b/insurance/apps/profile/templates/profile/userprofile_policylist.html
@@ -8,12 +8,12 @@
             <ul class="ui-tabs-nav ui-helper-reset ui-helper-clearfix ui-widget-header ui-corner-all">
                 <li class="ui-state-default ui-corner-top"><a href="{% url userprofile_edit %}">Мои данные</a></li>
                 <li class="ui-state-default ui-corner-top ui-tabs-selected ui-state-active"><a href="{% url userprofile_policylist %}">Мои полисы</a></li>
-                <li class="ui-state-default ui-corner-top"><a href="{% url notification_notices %}">Уведомления {% if notice_unseen_count %}({{ notice_unseen_count }}){% endif %}</a></li>
+                <li class="ui-state-default ui-corner-top" id="long-tab"><a href="{% url notification_notices %}">Уведомления {% if notice_unseen_count %}({{ notice_unseen_count }}){% endif %}</a></li>
                 <li class="ui-state-default ui-corner-top"><a href="{% url userprofile_faq %}">FAQ</a></li>
             </ul>
-            <div  class="ui-tabs-panel ui-widget-content ui-corner-bottom">
+            <div  class="ui-tabs-panel ui-widget-content ui-corner-bottom no-background">
                           <div id="calc-tabs" class="low-tabs shrink-tabs">
-                            <ul class="ui-tabs-nav ui-helper-reset ui-helper-clearfix ui-widget-header ui-corner-all">
+                            <ul class="ui-tabs-nav2 ui-helper-reset ui-helper-clearfix ui-widget-header ui-corner-all">
                                 {% for type_id, type_name in policy_types.items %}
                                     <li class="ui-state-default ui-corner-top {% if type_id|stringformat:"s" == policy_type %} ui-tabs-selected ui-state-active{% endif %}">
                                         <a href="{% url userprofile_policylist_type type_id %}">{{ type_name }}</a>
