--- a/insurance/templates/includes/header.html
+++ b/insurance/templates/includes/header.html
@@ -14,8 +14,8 @@
             <li class="one-line" id="item-1"><a href="#">КАСКО</a></li>
             <li class="one-line" id="item-2"><a href="#">ОСАГО</a></li>
             <li class="two-line" id="item-3"><a href="#">ЗЕЛЕНАЯ КАРТА</a></li>
-            <li class="two-line" id="item-4"><a href="#">СТРАХОВАНИЯ ИМУЩЕСТВА</a></li>
-            <li class="two-line" id="item-5"><a href="#">ИПОТЕЧНОЕ КОМПАНИЕ</a></li>
+            <li class="two-line" id="item-4"><a href="#">СТРАХОВАНИЕ ИМУЩЕСТВА</a></li>
+            <li class="two-line" id="item-5"><a href="#">ИПОТЕЧНОЕ СТРАХОВАНИЕ</a></li>
             <li class="two-line" id="item-6"><a href="#">СТРАХОВАНИЕ ПУТЕШЕСТВУЮЩИХ</a></li>
         </ul>
         <span></span>
