Proper design for dialogs.

--- a/insurance/static/css/style.css
+++ b/insurance/static/css/style.css
@@ -110,8 +110,12 @@ a:hover {
     padding-bottom: 3px;
     margin-bottom: 8px;
     text-transform: uppercase;
-    color: #fff;
+    color: #333;
     float: none;
+}
+
+#setup-logged {
+    background: url(/static/images/setup_user_logged.png) 0 0 no-repeat !important;
 }
 
 #head-logo {
@@ -1862,6 +1866,7 @@ h4.ui-accordion-header {
     border-radius: 4px;
     border: 2px solid #591c06;
     display: none;
+    color: #501C07;
 }
 
 .pop_up_main {
@@ -1875,14 +1880,14 @@ h4.ui-accordion-header {
 }
 
 .pop_up_register {
-    width: 600px;
+    width: 530px;
 }
 
 .pop_up_header {
-    background: url(/static/images/pop_up_header.jpg) 0 0 repeat-x;
+    background: url(/static/images/back_tabs.png) 0 0 repeat;
     height: 30px;
     padding: 15px 0 0 26px;
-    font-size: 15px;
+    font-size: 18px;
     color: #fff;
     position: relative;
 }
@@ -1898,19 +1903,25 @@ h4.ui-accordion-header {
 }
 
 .pop_up_cont {
-    background: #ae948e url(/static/images/pop_up_cont.jpg) 0 0 repeat-x;
+    background-color: white;
+    /*: #ae948e url(/static/images/pop_up_cont.jpg) 0 0 repeat-x; */
     padding: 10px;
+    position: relative;
+    display: block;
+    color: #501C07;    
 }
 
 .pop_up_cont_in {
-    background: #cebfbb url(/static/images/pop_up_cont_in.jpg) 0 0 repeat-x;
-    padding: 28px 20px 30px 50px;
+/*    background: #cebfbb url(/static/images/pop_up_cont_in.jpg) 0 0 repeat-x; */
+    background-color: white;
+    padding: 28px 20px 30px 30px;
     -moz-border-radius: 4px;
     -webkit-border-radius: 4px;
     -khtml-border-radius: 4px;
     border-radius: 4px;
-    border: 2px solid #9f606b;
+    border: 0px solid #9f606b;
     overflow: hidden;
+    color: #501C07;    
 }
 
 .center_reg {
@@ -2068,8 +2079,12 @@ h4.ui-accordion-header {
 }
 
 .pop_up_questions {
-    width: 877px;
+    width: 777px;
 }
+
+.pop_up_long {
+    width: 990px !important;
+    }
 
 .pop_up_questions .pop_up_cont_in {
     padding-left: 14px;
@@ -2077,11 +2092,11 @@ h4.ui-accordion-header {
 
 .pop_up_questions_l {
     float: left;
-    width: 335px;
+    width: 339px;
 }
 
 .questions_form {
-    padding: 27px 0 0 0;
+    padding: 7px 0 0 0;
 }
 
 .questions_form_header {
@@ -2090,7 +2105,7 @@ h4.ui-accordion-header {
 
 .questions_textarea	textarea {
     border: 1px solid #501c06;
-    width: 333px;
+    width: 339px;
     height: 71px;
     resize: none;
     margin: 0 0 5px 0;
@@ -2161,7 +2176,7 @@ h4.ui-accordion-header {
 
 .pop_up_questions_r {
     float: right;
-    width: 335px;
+    width: 275px;
 }
 
 #exposeMask {
@@ -2299,7 +2314,7 @@ div.messages li {
 }
 
 /*Main round blocks on Calc Pages*/
-#calc-tabs .form-round-block{
+.form-round-block{
     margin: 15px 0;
     padding: 20px 20px 30px 20px;
     background: url(/static/images/back_tabs.png) bottom left repeat-x;
