--- a/insurance/templates/registration/logout.html
+++ b/insurance/templates/registration/logout.html
@@ -1,5 +1,9 @@
 {% extends "base.html" %}
 
 {% block content %}
-До свидания!
+<div id="calc-tabs" class="low-tabs">
+<div class="form-round-block">
+<h2>До свидания!</h2>
+Вы вышли из системы. Перейти на <a href="/">главную страницу</a>?
+</div></div>
 {% endblock %}
