--- a/insurance/apps/ins_notification/templates/notification/forms/question_form.html
+++ b/insurance/apps/ins_notification/templates/notification/forms/question_form.html
@@ -1,9 +1,9 @@
-<div class="pop_up_main pop_up_questions">
-		<div class="pop_up_header">
-			Вопросы
-		</div>
-		<div class="pop_up_cont"><div class="pop_up_cont_in">
-			<div class="pop_up_questions_l">
+<div class="pop_up_main pop_up_questions pop_up_long">
+        <div class="pop_up_header">
+            Вопросы
+        </div>
+        <div class="pop_up_cont"><div class="pop_up_cont_in">
+            <div class="pop_up_questions_l">
     <form action="{% url ins_notification_question %}" method="POST">{% csrf_token %}
       <div class="pop_up_header2">
       {{ form.non_field_errors }}
