Fixed absent script.

--- a/insurance/templates/calc/ifl/step4.html
+++ b/insurance/templates/calc/ifl/step4.html
@@ -7,6 +7,7 @@
     <script type="text/javascript" src="/static/js/jquery.validate.js"></script>
     <script type="text/javascript" src="/static/js/jquery.ui.datepicker.min.js"></script>
     <script type="text/javascript" src="/static/js/jquery.ui.datepicker-ru.js"></script>
+    <script type="text/javascript" src="/static/js/jquery.meio.mask.min.js"></script>
     <link rel="stylesheet" href="{{ STATIC_URL}}css/jquery.ui.theme.css"></link>
     <link rel="stylesheet" href="/static/css/jquery.ui.datepicker.css"></link>
     <script>
