--- a/insurance/local_settings.py.tmpl
+++ b/insurance/local_settings.py.tmpl
@@ -45,7 +45,8 @@ SERVLET_DB_PASS = 'insdpwd'
 
 SERVLET_URL = {"kasko": 'http://www.polisbook.ru:8080/ServerIF/MatrixIF',
                "osago": 'http://www.polisbook.ru:8080/ServerOsago/PB_Osago',
-               "ifl": "http://www.polisbook.ru:8080/ServerProperty/PB_Property"}
+               "ifl": "http://www.polisbook.ru:8080/ServerProperty/PB_Property",
+               "foreign": "http://www.polisbook.ru:8080/ServerVZR/PB_VZR"}       
 
 SERVLET_FAKE = False
 
