--- a/insurance/templates/calc/calc.html
+++ b/insurance/templates/calc/calc.html
@@ -18,7 +18,9 @@
         </li>
         <li class="ui-state-default ui-corner-top"><a href="#">ДМС</a></li>
         <li class="ui-state-default ui-corner-top"><a href="#">HC</a></li>
-        <li class="ui-state-default ui-corner-top"><a href="#">ВЗР</a></li>
+        <li class="ui-state-default ui-corner-top{% ifequal tab 5 %} ui-tabs-selected ui-state-active{% endifequal %}">
+            <a href="{% url ncalc_step1_foreign %}">ВЗР</a>
+        </li>
         <li class="ui-state-default ui-corner-top{% ifequal tab 6 %} ui-tabs-selected ui-state-active{% endifequal %}">
             <a href="{% url ncalc_step1_ifl %}">Имущество</a>
         </li>
