--- a/insurance/templates/calc/foreign/step3noreg.html
+++ b/insurance/templates/calc/foreign/step3noreg.html
@@ -72,7 +72,7 @@
                         </tr>
                         <tr>
                             <td>Территория действия договора</td>
-                            <td>все страны мира, за исключением США, Канады, Японии, Австралии, стран Карибского бассейна и страны постоянного проживания</td>
+                            <td>{{ data.territory }}</td>
                         </tr>
                         <tr>
                             <td>Страны действия договора</td>
