--- a/insurance/templates/calc/foreign/step1.html
+++ b/insurance/templates/calc/foreign/step1.html
@@ -71,7 +71,7 @@
                 get_visible_select_data(id);
             })
 
-            $("#id_countries, #id_trip_type, #id_trip_purpose").parent().hide();
+            $("#id_countries, #id_trip_type, #id_trip_purpose, #id_territory").parent().hide();
 
             $("#form-step1").submit(function() {
               props = ["#id_insurance_summ"];
@@ -116,14 +116,12 @@
             </tr>
             <tr>
                 <td class="label" style="vertical-align: top">
-                    Территория действия договора страхования
-                    <span class="table-error"></span>
+                    {{ s1_form.territory.label }}
+                    <span class="table-error">{{ s1_form.territory.errors }}</span>
                 </td>
                 <td class="visible-data second">
-                    <div class="visual">
-                        <span class="active" rel="1">все страны мира,</span> за исключением США, Канады, Японии, Австралии, стран Карибского бассейна и страны постоянного проживания
-                    </div>
-                    <span class="ajax-select"></span>
+                    <div class="visual"></div>
+                    <span class="ajax-select">{{ s1_form.territory }}</span>
                 </td>
             </tr>
             <tr>
